--- a/package.json
+++ b/package.json
@@ -79,6 +79,16 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1",
+      "^@modules/(.*)$": "<rootDir>/modules/$1",
+      "^@config/(.*)$": "<rootDir>/configs/$1",
+      "^@repositories/(.*)$": "<rootDir>/repositories/$1",
+      "^@custom-messages/(.*)$": "<rootDir>/common/message/$1",
+      "^@dto/(.*)$": "<rootDir>/dto/$1",
+      "^@entities/(.*)$": "<rootDir>/entities/$1",
+      "^@films/(.*)$": "<rootDir>/films/$1"
+    }
   }
 }
